# nikita_andr

./: Lab01.cpp  README.md  отчет проекта.docx
LAb5/Lab5/: Lab5.vcxproj
LAb5/Lab5/x64/Debug/: Lab5.exe.recipe  vc143.idb
LAb5/Lab5/x64/Debug/Lab5.tlog/: CL.write.1.tlog  Cl.items.tlog  Lab5.lastbuildstate  link.command.1.tlog
Lab/: NewLab1.cpp  NewLab1.vcxproj  NewLab1.vcxproj.filters  README.md
Lab1/: CMakeLists.txt  Lab1.cpp
Lab1 and Lab2/Lab 1.1/: Lab 1.1.sln
Lab1 and Lab2/Lab 1.1/Lab 1.1/: Lab 1.1.cpp  Lab 1.1.vcxproj
Lab1 and Lab2/Lab2.2.2/: Lab2.2.2.sln
Lab1 and Lab2/Lab2.2.2/Lab2.2.2/: Lab2.2.2.cpp  Lab2.2.2.vcxproj  Lab2.2.2.vcxproj.filters  car.cpp  car.h
Lab44/Lab4/: Book.cpp  Book.h  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab5/Lab5/: Lab5.sln
Lab5/Lab5/Lab5/: Lab5.cpp
Lab555/: .gitignore  CMakeLists.txt  detaildialog.cpp  detaildialog.h  detaildialog.ui  enemy.cpp  enemy.h  mage.cpp  mage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  npc.cpp  npc.h  resources.qrc
Laba10/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Laba666/: 56.json  CMakeLists.txt  PointOfInterest.h  example.txt  mainwindow.cpp  mainwindow.h  program1window.cpp  program1window.h  program2window.cpp  program2window.h
lab6/lab6.2/: lab6.2.cpp  lab6.2.vcxproj  lab6.2.vcxproj.filters
lab6/lab6.2/x64/Debug/: lab6.2.exe.recipe  lab6.2.ilk  vc143.idb
proekt/: CMakeLists.txt  card.cpp  card.h  carddeck.cpp  carddeck.h  hand.cpp  hand.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
(+38 files in other folders)
